Now have to be logged in to debate, changed some layouts

--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -25,7 +25,7 @@
                 </h1>
 
 
-                    <button class="btn btn-default join_debate debate_button">+ Add Debate</button>
+                    <button class="btn btn-default">+ Add Debate</button>
             </div> 
         </div>
         
@@ -40,19 +40,9 @@
         
 
         <hr>
+ 
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Debatable 2017</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
-
-    </div>
-    <!-- /.container -->
+    </div> 
 
 
  
