--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LoginApp</title>
+	<title>Debatable</title>
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
  
@@ -75,7 +76,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; 2015 LoginApp, Inc.</p>
+        <p>&copy; 2017 Debatable.</p>
       </footer>
 
     </div> <!-- /container --> 
