--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,8 +108,12 @@ footer {
   text-shadow: black 0.1em 0.1em 0.1em;
   background:transparent;
   text-align: center; 
-  background-color: rgba(34, 34, 34, 0.46);
+  background-color: rgba(34, 34, 34, 0.46);   
 }
+.container .jumbotron, .container-fluid .jumbotron { 
+    border-radius: 0px;  
+}
+
 
 .jumbotron > h1{
 	font-size: 60px
@@ -181,3 +185,115 @@ footer {
     from {top: -300px; opacity: 0}
     to {top: 0; opacity: 1}
 }
+
+
+
+
+.card {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.card {
+    margin-bottom: 20px;
+  box-sizing: border-box;
+  border-radius: 2px;
+  background-clip: padding-box;
+}
+.card span.card-title {
+    color: #fff;
+    font-size: 24px;
+    font-weight: 300; 
+}
+
+.card .card-image {
+  position: relative;
+  overflow: hidden;
+}
+
+
+.card .card-image img {
+  border-radius: 2px 2px 0 0;
+  background-clip: padding-box;
+  position: relative;
+  z-index: -1;
+  height: 245px;
+  flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
+   object-fit: cover;
+}
+.card .card-image span.card-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 16px;
+  width: 100%;
+  background-color: rgba(29, 29, 29, 0.6);
+}
+.card .card-content {
+  padding: 16px;
+  border-radius: 0 0 2px 2px;
+  background-clip: padding-box;
+  box-sizing: border-box;
+  height: 100px;
+  max-height: 95px;
+  overflow: auto;
+}
+.card .card-content p {
+  margin: 0;
+  color: inherit;
+}
+.card .card-content span.card-title {
+  line-height: 48px;
+}
+.card .card-action { 
+  padding: 16px;
+}
+ 
+.card .card-action a:hover {
+  color: #ffd8a6;
+  text-decoration: none;
+}
+
+.btn-default{
+
+    margin: 0 10px 0px 10px;
+}
+
+ 
+/*Scroll*/ 
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 0px none #ffffff;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+} 
+
+    
