--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -24,15 +24,43 @@
                     <small>{{ current_date }}</small>
                 </h1>
 
-
-                    <button class="btn btn-default">+ Add Debate</button>
+ 
             </div> 
         </div>
         
-
-
+        <div class="row">
+            <div class="col-lg-12">
+                 <form method="post" action="/admin/add_topic">
+                  <div class="form-group">
+                    <label>Topic Name</label>
+                    <input type="text" class="form-control" name="topic_name" placeholder="Topic Name">
+                  </div>
+                  <div class="form-group">
+                    <label>Short Topic Name</label>
+                    <input type="text" class="form-control" name="topic_name_short" placeholder="Short Topic Name">
+                  </div>
+                  <div class="form-group">
+                    <label>Topic Description</label>
+                    <input type="text" class="form-control" name="topic_desc" placeholder="Topic Description">
+                  </div>
+                  <div class="form-group">
+                    <label>Topic Image url</label>
+                    <input type="text" class="form-control" name="topic_image" placeholder="Topic Image url">
+                  </div>
+                  <div class="form-group">
+                    <label>Side One Label</label>
+                    <input type="text" class="form-control" name="side_one" placeholder="Side One Label">
+                  </div>
+                  <div class="form-group">
+                    <label>Side Two Label</label>
+                    <input type="text" class="form-control" name="side_two" placeholder="Side Two Label">
+                  </div>
+                  <button type="submit" class="btn btn-default">+ Add Debate</button>
+                </form>
+            </div>
+        </div>
 		
-		 
+ 
  
 
         <hr>
