--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -31,8 +31,8 @@
         <h3>{{debate_db_info.[0].topic_desc}}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" data-debate_side="agree">I Agree</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal" data-debate_side="disagree">I Disagree</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" data-debate_side="side_one">{{debate_db_info.[0].side_one}}</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" data-debate_side="side_two">{{debate_db_info.[0].side_two}}</button>
       </div>
     </div>
   </div>
