--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,5 @@
-  
-    <!-- Navigation 
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Debatable</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </div> 
-        </div> 
-    </nav>  --> 
+ 
 
-	
     <div class="container-fluid header_background">
             <div class="row">
                 <div class="jumbotron">
@@ -40,11 +12,11 @@
 
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container-fluid">
 
         <!-- Page Header -->
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <h1 class="page-header">
                     Top Debates
                     <small>{{ current_date }}</small>
@@ -57,14 +29,26 @@
             {{#ifFirst @index}}
                   <div class="row"> 
             {{/ifFirst}}
-                
-                <div class="col-md-4 portfolio-item"> 
-                    <img class="img-responsive" src="{{ current_topic.topic_image }}" alt="">
-                    <h3>
-                        <a href="#">{{ current_topic.topic_name }}</a>
-                    </h3>
-                    <p>{{ current_topic.topic_desc }}</p>
-                       {{#if ../user}}
+          
+                     
+                     
+
+
+
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class="img-responsive" src="{{ current_topic.topic_image }}" alt="">
+                                <span class="card-title">{{ current_topic.topic_name }}</span>
+                            </div>
+                            
+                            <div class="card-content">
+                                <p>{{ current_topic.topic_desc }}</p>
+                            </div>
+                            
+                            <div class="card-action" align="center">
+                                  {{#if ../user}}
                         <button class="btn btn-default join_debate debate_button" data-debateName = "{{ current_topic.topic_name_short }}">Join Debate</button>
                         <button class="btn btn-default spectate_debate debate_button" data-debateName = "{{ current_topic.topic_name_short }}">Spectate Debate</button>
                        {{else}} 
@@ -72,8 +56,12 @@
                         <button class="btn btn-default spectate_debate debate_button" data-debateName = "{{ current_topic.topic_name_short }}">Spectate Debate</button>
                        {{/if}}
 
-                    
-                </div> 
+
+                            </div>
+                        </div>
+                    </div>
+
+                     
 
             {{#ifThird @index}}
                   </div> 
@@ -81,6 +69,8 @@
 
 
         {{/each}}
+
+
  
 
         <hr>
@@ -116,16 +106,7 @@
         <!-- /.row -->
 
         <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Debatable 2017</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
+ 
 
     </div>
     <!-- /.container -->
