--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -54,7 +54,7 @@
         <!-- /.container -->
     </nav>
 
-
+ <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12">
           {{#if success_msg}}
