--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,24 +230,32 @@ footer {
   width: 100%;
   background-color: rgba(29, 29, 29, 0.6);
 }
-.card .card-content {
-  padding: 16px;
-  border-radius: 0 0 2px 2px;
-  background-clip: padding-box;
-  box-sizing: border-box;
-  height: 100px;
-  max-height: 95px;
-  overflow: auto;
+ p.card-desc { 
+    /* top: 0; */
+    bottom: 0;
+    display:none;
+    color:white;
+    font-size:16px;
 }
-.card .card-content p {
-  margin: 0;
-  color: inherit;
+.card-image:hover {
+  height:100%;
+  cursor:pointer;
 }
-.card .card-content span.card-title {
-  line-height: 48px;
+
+.card-image:hover .card-title {
+  animation: slide-up 0.25s forwards;
 }
+
+.card-image:hover p.card-desc {
+  display: block; 
+  text-align: center;
+  top: 25%;
+}
+
+
+
 .card .card-action { 
-  padding: 16px;
+  padding: 10px;
 }
  
 .card .card-action a:hover {
@@ -257,43 +265,50 @@ footer {
 
 .btn-default{
 
+    padding: 10px 20px;
+    border-radius: 0px;
     margin: 0 10px 0px 10px;
 }
 
  
-/*Scroll*/ 
+/*Scroll*/  
 ::-webkit-scrollbar {
-  width: 3px;
-  height: 3px;
+  width: 7px;
+  height: 7px;
 }
 ::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
 }
 ::-webkit-scrollbar-thumb {
-  background: #e1e1e1;
+  background: #757575;
   border: 0px none #ffffff;
   border-radius: 0px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #ffffff;
+  background: #757575;
 }
 ::-webkit-scrollbar-thumb:active {
-  background: #000000;
+  background: #c0c0c0;
 }
 ::-webkit-scrollbar-track {
-  background: #666666;
+  background: #ffffff;
   border: 0px none #ffffff;
   border-radius: 0px;
 }
 ::-webkit-scrollbar-track:hover {
-  background: #666666;
+  background: #ffffff;
 }
 ::-webkit-scrollbar-track:active {
-  background: #333333;
+  background: #ffffff;
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
 } 
-
     
+@keyframes slide-up {
+    from {height: 10px}
+    to {height: 100%;}
+}
+
+
