--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -36,7 +36,7 @@
               </ul>
             </nav>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="#">About</a>
@@ -48,7 +48,7 @@
                         <a href="#">Contact</a>
                     </li>
                 </ul>
-            </div>
+            </div>-->
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
