--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,7 +197,7 @@ footer {
     margin-bottom: 20px;
   box-sizing: border-box;
   border-radius: 2px;
-  background-clip: padding-box;
+  background-clip: padding-box; 
 }
 .card span.card-title {
     color: #fff;
@@ -230,26 +230,36 @@ footer {
   width: 100%;
   background-color: rgba(29, 29, 29, 0.6);
 }
- p.card-desc { 
+.card .card-image  p.card-desc { 
     /* top: 0; */
     bottom: 0;
     display:none;
     color:white;
     font-size:16px;
 }
-.card-image:hover {
-  height:100%;
-  cursor:pointer;
+
+
+
+.card-image span.card-title {
+  webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -ms-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  transition: all .4s ease; 
+  height:25%;
 }
 
-.card-image:hover .card-title {
-  animation: slide-up 0.25s forwards;
+
+.card-image:hover span.card-title {
+  height:100%;
+  cursor:pointer;
 }
 
 .card-image:hover p.card-desc {
   display: block; 
   text-align: center;
   top: 25%;
+  transition: 2s;
 }
 
 
@@ -265,7 +275,7 @@ footer {
 
 .btn-default{
 
-    padding: 10px 20px;
+    padding: 10px;
     border-radius: 0px;
     margin: 0 10px 0px 10px;
 }
@@ -305,10 +315,3 @@ footer {
 ::-webkit-scrollbar-corner {
   background: transparent;
 } 
-    
-@keyframes slide-up {
-    from {height: 10px}
-    to {height: 100%;}
-}
-
-
