--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,6 +4,7 @@
 	<title>Debatable</title>
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/palette.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -68,12 +69,11 @@
           {{#if error}}
             <div class="alert alert-danger">{{error}}</div>
           {{/if}}
-          
-          {{{body}}}
-        </div>
-
-        
+           
+        </div> 
       </div>
+</div>
+      {{{body}}}
 
       <footer class="footer">
         <p>&copy; 2017 Debatable.</p>
