--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -41,7 +41,7 @@
                   </div>
                   <div class="form-group">
                     <label>Topic Description</label>
-                    <input type="text" class="form-control" name="topic_desc" placeholder="Topic Description">
+                    <textarea  class="form-control" name="topic_desc" placeholder="Topic Description"></textarea>
                   </div>
                   <div class="form-group">
                     <label>Topic Image url</label>
