--- a/views/layouts/chat_layout.handlebars
+++ b/views/layouts/chat_layout.handlebars
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Debatable - Chat</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/palette.css" />
