--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/palette.css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -27,7 +28,8 @@
              <nav>
               <ul class="nav nav-pills pull-right">
                 {{#if user}}
-                  <li role="presentation"><a href="/">Dashboard</a></li>
+                  <li role="presentation"><a href="/">Dashboard</a></li>                  
+                  <li role="presentation"><a href="/profile">Profile</a></li>
                   <li role="presentation"><a href="/users/logout">Logout</a></li>
                   {{#if admin }}<li role="presentation"><a href="/admin">Admin</a></li>{{/if}}
                 {{else}}
@@ -75,10 +77,11 @@
 </div>
       {{{body}}}
 
-      <footer class="footer">
-        <p>&copy; 2017 Debatable.</p>
-      </footer>
-
+      <div class="container">
+	      <footer class="footer">
+	        <p>&copy; 2017 Debatable.</p>
+	      </footer>
+	  </div>
     </div> <!-- /container --> 
     
     <script src="js/jquery.js"></script> 
