--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="/css/palette.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta charset="UTF-8">
+<meta name="google" content="notranslate">
+<meta http-equiv="Content-Language" content="en">
 </head>
 <body>
  
@@ -87,5 +91,16 @@
     <script src="js/jquery.js"></script> 
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-93966692-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
