--- a/public/css/style.css
+++ b/public/css/style.css
@@ -270,3 +270,27 @@ font-family: 'Roboto', sans-serif;
   background: transparent;
 } 
 */
+
+  /* code for animated blinking cursor */
+   .typed-cursor{
+    font-size: 29px;
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+    }
+    @keyframes blink{
+        0% { opacity:1; }
+        50% { opacity:0; }
+        100% { opacity:1; }
+    }
+    @-webkit-keyframes blink{
+        0% { opacity:1; }
+        50% { opacity:0; }
+        100% { opacity:1; }
+    }
+    @-moz-keyframes blink{
+        0% { opacity:1; }
+        50% { opacity:0; }
+        100% { opacity:1; }
+    }
