--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,20 @@
             <div class="row">
                 <div class="jumbotron">
                   <h1>Debatable</h1>
-                  <h2 class="lead">The realtime debating website for all your mass debate needs.</h2>
+
+                  <div id="typed-strings">
+                    <span>The realtime debating website</span>
+                    <p>Discuss topics</p>
+                    <p>Earn rewards</p>
+                    <p>Build your profile</p>
+                </div>
+            <h2 id="typed" style="white-space:pre; display: inline;"></h2>
+
+
+                  <!--<h2 class="lead">The realtime debating website for all your mass debate needs.</h2>-->
+                      <div class="type-wrap">
+            
+        </div>
                 </div>
             </div>
     </div> 
