--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/palette.css" />
+  <script src="/js/typed.js" type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
