Winner is now alerted of win, needs to add some data to their document in the database Also might need to clean up that code, pass the io object instead into queue_manager and then straight to chat_winner from there

--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -111,10 +111,14 @@
     });
 
 
-    socket.on('log_data', function(data){
-    console.log("New data to be logged: " , data);
-    });
+  socket.on('log_data', function(data){
+  console.log("New data to be logged: " , data);
+  });
  
+
+   socket.on('chat_won',function(data){
+    alert("You win the chat!!!!, server says: " + data)
+   })
  
 
 
