--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -21,7 +21,8 @@
             <div class="col-lg-12">
                 <h3>Name: {{ user_data.0.name }} </h3>
                 <h3>Email: {{ user_data.0.email }} </h3>
-                <h3>Username: {{ user_data.0.username }} </h3> 
+                <h3>Username: {{ user_data.0.username }} </h3>
+                <h3>Last won debate: {{ user_data.0.last_win }}</h3>
             </div>
         </div> 
  
