Track number of wins

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,6 +23,7 @@
                 <h3>Email: {{ user_data.0.email }} </h3>
                 <h3>Username: {{ user_data.0.username }} </h3>
                 <h3>Last won debate: {{ user_data.0.last_win }}</h3>
+                <h3>Number of debates won: {{ user_data.0.win_count }}</h3>
             </div>
         </div> 
  
