--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 /*body {
-    padding-top: 70px;  Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. 
+    padding-top: 70px;  Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes.
 }*/
 
 /*
@@ -18,15 +18,15 @@ footer {
 }
 
 .container>.navbar-header {
-    margin-right: 0px; 
-    margin-left: -15px; 
+    margin-right: 0px;
+    margin-left: -15px;
 }
 
 
 *{
 
 font-family: 'Roboto', sans-serif;
-} 
+}
 
 
 .debate_row{
@@ -36,11 +36,11 @@ font-family: 'Roboto', sans-serif;
 
 
 
- 
+
 .header_background{
   	background: url('img_parallax.jpg') no-repeat center center;
 	/* Full height */
-	height: 100%; 
+	height: 100%;
 	/* Create the parallax scrolling effect */
 	background-attachment: fixed;
 	background-position: center;
@@ -54,11 +54,11 @@ font-family: 'Roboto', sans-serif;
   color: white;
   text-shadow: black 0.1em 0.1em 0.1em;
   background:transparent;
-  text-align: center; 
-  background-color: rgba(34, 34, 34, 0.46);   
+  text-align: center;
+  background-color: rgba(34, 34, 34, 0.46);
 }
-.container .jumbotron, .container-fluid .jumbotron { 
-    border-radius: 0px;  
+.container .jumbotron, .container-fluid .jumbotron {
+    border-radius: 0px;
 }
 
 
@@ -71,9 +71,6 @@ font-family: 'Roboto', sans-serif;
 }
 
 
-.debate_button{
-	color:black;
-}
 
 
 .debate_card{
@@ -89,6 +86,181 @@ font-family: 'Roboto', sans-serif;
 .debate_card_holder{
 	margin-left: 100px;
 }
+
+
+
+
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+.debateCard * {
+   box-sizing: border-box;
+}
+.debateCard a {
+   text-decoration: none;
+}
+.debateCard h1 {
+   font-family: "Open Sans", sans-serif;
+   font-weight: 300;
+}
+.row {
+  /* max-width: 900px;*/
+   margin: 50px auto 0;
+}
+.debateCard {
+   /*float: left;
+   padding: 0 1.7rem;
+   /*width: 50%;*/
+}
+.debateCard .menu-content {
+   margin: 0;
+   padding: 0;
+   list-style-type: none;
+}
+.debateCard .menu-content::before,
+.debateCard .menu-content::after {
+   content: '';
+   display: table;
+}
+.debateCard .menu-content::after {
+   clear: both;
+}
+.debateCard .menu-content li {
+   display: inline-block;
+}
+.debateCard .menu-content a {
+   color: #fff;
+}
+.debateCard .menu-content span {
+   position: absolute;
+   left: 50%;
+   top: 0;
+   font-size: 10px;
+   font-weight: 700;
+   font-family: 'Open Sans';
+   transform: translate(-50%, 0);
+}
+.debateCard .wrapper {
+   background-color: #fff;
+   min-height: 300px;
+   position: relative;
+   overflow: hidden;
+   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
+}
+.debateCard .wrapper:hover .data {
+   transform: translateY(0);
+}
+.debateCard .data {
+   position: absolute;
+   bottom: -5px;
+   width: 100%;
+   transform: translateY(calc(70px + 1em));
+   transition: transform 0.3s;
+}
+.debateCard .data .content {
+   padding: 1em;
+   position: relative;
+   z-index: 1;
+}
+.debateCard .author {
+   font-size: 12px;
+}
+.debateCard .title {
+   margin-top: 10px;
+}
+.debateCard .text {
+   height: 70px;
+   margin: 0;
+}
+.debateCard input[type='checkbox'] {
+   display: none;
+}
+.debateCard input[type='checkbox']:checked + .menu-content {
+   transform: translateY(-60px);
+}
+.imageOverlay{
+  width: 100%;
+  position: absolute;
+  height: 300px;
+  background: rgba(42, 49, 50, 0.1);
+  transition: all .3s;
+}
+.debateCard:hover .imageOverlay{
+  background: rgba(42, 49, 50, 0.74);
+
+}
+
+.debateCard .wrapper:hover .menu-content span {
+   transform: translate(-50%, -10px);
+   opacity: 1;
+}
+.debateCard .header {
+   color: #fff;
+   padding: 1em;
+}
+.debateCard .header::before,
+.debateCard .header::after {
+   content: '';
+   display: table;
+}
+.debateCard .header::after {
+   clear: both;
+}
+.debateCard .header .date {
+   float: left;
+   font-size: 12px;
+}
+.debateCard .menu-content {
+   float: right;
+}
+.debateCard .menu-content li {
+   margin: 0 5px;
+   position: relative;
+}
+.debateCard .menu-content span {
+   transition: all 0.3s;
+   opacity: 0;
+}
+.debateCard .data {
+   color: #fff;
+   transform: translateY(calc(70px + 4em));
+}
+.debateCard .title a {
+   color: #fff;
+}
+.debateCard .button {
+   display: block;
+   width: 100px;
+   margin: 2em auto 1em;
+   text-align: center;
+   font-size: 12px;
+   color: #fff;
+   line-height: 1;
+   position: relative;
+   font-weight: 700;
+}
+.debateCard .button::after {
+   content: '\2192';
+   opacity: 0;
+   position: absolute;
+   right: 0;
+   top: 50%;
+   transform: translate(0, -50%);
+   transition: all 0.3s;
+}
+.debateCard .button:hover::after {
+   transform: translate(5px, -50%);
+   opacity: 1;
+}
+
+
+.debateCard .button{
+  outline: 1px solid white;
+  padding: 7px;
+}
+
+
 
 /* Modal Header */
 .modal-header {
@@ -124,7 +296,7 @@ font-family: 'Roboto', sans-serif;
 
 /* Add Animation */
 @-webkit-keyframes animatetop {
-    from {top: -300px; opacity: 0} 
+    from {top: -300px; opacity: 0}
     to {top: 0; opacity: 1}
 }
 
@@ -144,12 +316,12 @@ font-family: 'Roboto', sans-serif;
     margin-bottom: 20px;
   box-sizing: border-box;
   border-radius: 2px;
-  background-clip: padding-box; 
+  background-clip: padding-box;
 }
 .card span.card-title {
     color: #fff;
     font-size: 24px;
-    font-weight: 300; 
+    font-weight: 300;
 }
 
 .card .card-image {
@@ -178,7 +350,7 @@ font-family: 'Roboto', sans-serif;
   background-color: rgba(29, 29, 29, 0.6);
   text-align: center;
 }
-.card .card-image  p.card-desc { 
+.card .card-image  p.card-desc {
     /* top: 0; */
     bottom: 0;
     display:none;
@@ -193,7 +365,7 @@ font-family: 'Roboto', sans-serif;
   -moz-transition: all .4s ease;
   -ms-transition: all .4s ease;
   -o-transition: all .4s ease;
-  transition: all .4s ease; 
+  transition: all .4s ease;
   height:25%;
 }
 
@@ -204,7 +376,7 @@ font-family: 'Roboto', sans-serif;
 }
 
 .card-image:hover p.card-desc {
-  display: block; 
+  display: block;
   text-align: center;
   top: 25%;
   transition: 2s;
@@ -213,10 +385,10 @@ font-family: 'Roboto', sans-serif;
 
 
 
-.card .card-action { 
+.card .card-action {
   padding: 10px;
 }
- 
+
 .card .card-action a:hover {
   color: #ffd8a6;
   text-decoration: none;
@@ -234,8 +406,8 @@ font-family: 'Roboto', sans-serif;
     margin-bottom: 0px;
 }
 
- 
-/*Scroll   
+
+/*Scroll
 ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
@@ -268,7 +440,7 @@ font-family: 'Roboto', sans-serif;
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
-} 
+}
 */
 
   /* code for animated blinking cursor */
