--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
- 
 
-    <div class="container-fluid header_background">
+
+  <!--  <div class="container-fluid header_background">
             <div class="row">
                 <div class="jumbotron">
                   <h1>Debatable</h1>
@@ -13,21 +13,19 @@
                 </div>
             <h2 id="typed" style="white-space:pre; display: inline;"></h2>
 
-
-                  <!--<h2 class="lead">The realtime debating website for all your mass debate needs.</h2>-->
                       <div class="type-wrap">
-            
+
         </div>
                 </div>
             </div>
-    </div> 
+    </div> -->
 
 
 
     <!-- Page Content -->
     <div class="container">
 
-        
+
 
         <!-- Page Header -->
         <div class="row">
@@ -36,54 +34,86 @@
                     Top Debates
                     <small>{{ current_date }}</small>
                 </h1>
-            </div> 
-        </div> 
-          
+            </div>
+        </div>
+
         <!-- Debate Topics -->
         {{#each top_debates_list as | current_topic|}}
             {{#ifFirst @index}}
-                  <div class="row"> 
+                  <div class="row">
             {{/ifFirst}}
-          
-                      
+
+
 
                     <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img class="img-responsive" src="{{ current_topic.topic_image }}" alt="">
-                                <span class="card-title">
-                                {{ current_topic.topic_name }}
-                                <p class="card-desc">{{ current_topic.topic_desc }}</p>
-                                </span>
 
+
+
+                        <div class="debateCard">
+                          <div class="wrapper" style="background: url({{ current_topic.topic_image }}) center/cover no-repeat;">
+                            <div class="imageOverlay"></div>
+                            <div class="header">
+                              <div class="date">
+                                <span class="day">12</span>
+                                <span class="month">Aug</span>
+                                <span class="year">2016</span>
+                              </div>
+                              <ul class="menu-content">
+                                <li>
+                                  <a href="#" class="fa fa-bookmark-o"></a>
+                                </li>
+                                <li><a href="#" class="fa fa-heart-o"><span>18</span></a></li>
+                                <li><a href="#" class="fa fa-comment-o"><span>3</span></a></li>
+                              </ul>
                             </div>
-                            
-                            <!--<div class="card-content">
-                                <p>{{ current_topic.topic_desc }}</p>
-                            </div>-->
-                            
-                            <div class="card-action" align="center">
-                                  {{#if ../user}}
-                        <button class="btn btn-default join_debate debate_button" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Join Debate</button>
-                        <button class="btn btn-default spectate_debate debate_button" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Spectate Debate</button>
-                       {{else}} 
-                        <a href="/users/login"><button class="btn btn-default" >Login to Join Debate</button></a>
-                        <button class="btn btn-default spectate_debate debate_button" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Spectate Debate</button>
-                       {{/if}}
-
-
+                            <div class="data">
+                              <div class="content">
+                                <span class="author">Jane Doe</span>
+                                <h1 class="title"><a href="#">{{ current_topic.topic_name }}</a></h1>
+                                <p class="text">{{ current_topic.topic_desc }}</p>
+                                {{#if ../user}}
+                                    <div class="col-sm-6"><a href="#" class="button join_debate" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Join Debate</a></div>
+                                    <div class="col-sm-6"><a href="#" class="button spectate_debate" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Spectate</a></div>
+                                 
+                                {{else}}
+                                  <a href="#" class="button">Login to Join</a>
+                                {{/if}}
+                              </div>
                             </div>
+                          </div>
                         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                     </div>
-                   
+
 
             {{#ifThird @index}}
-                  
-                  </div> 
+
+                  </div>
 
             {{else}}
 
-                {{#if @last}} 
+                {{#if @last}}
                     </div>
                 {{/if}}
 
@@ -91,6 +121,7 @@
 
 
         {{/each}}
+
 
 
         <!-- Pagination -->
@@ -122,7 +153,7 @@
             </div>
         </div>
         <!-- /.row -->
- 
+
 
         <!--User debates-->
 
@@ -133,16 +164,16 @@
                     User Debates
                     <small>{{ current_date }}</small>
                 </h1>
-            </div> 
-        </div> 
-          
+            </div>
+        </div>
+
         <!-- user Debate Topics -->
         {{#each user_debates_list as | current_topic|}}
             {{#ifFirst @index}}
-                  <div class="row"> 
+                  <div class="row">
             {{/ifFirst}}
-          
-                      
+
+
 
                     <div class="col-sm-4">
                         <div class="card">
@@ -154,16 +185,16 @@
                                 </span>
 
                             </div>
-                            
+
                             <!--<div class="card-content">
                                 <p>{{ current_topic.topic_desc }}</p>
                             </div>-->
-                            
+
                             <div class="card-action" align="center">
                                   {{#if ../user}}
                         <button class="btn btn-default join_debate debate_button" data-debateList = "users" data-debateName = "{{ current_topic.topic_name_short }}">Join Debate</button>
                         <button class="btn btn-default spectate_debate debate_button" data-debateList = "users" data-debateName = "{{ current_topic.topic_name_short }}">Spectate Debate</button>
-                       {{else}} 
+                       {{else}}
                         <a href="/users/login"><button class="btn btn-default" >Login to Join Debate</button></a>
                         <button class="btn btn-default spectate_debate debate_button" data-debateList = "users" data-debateName = "{{ current_topic.topic_name_short }}">Spectate Debate</button>
                        {{/if}}
@@ -172,15 +203,15 @@
                             </div>
                         </div>
                     </div>
-                   
+
 
             {{#ifThird @index}}
-                  
-                  </div> 
+
+                  </div>
 
             {{else}}
 
-                {{#if @last}} 
+                {{#if @last}}
                     </div>
                 {{/if}}
 
@@ -221,11 +252,8 @@
         <!-- /.row -->
 
         <hr>
- 
- 
+
+
 
     </div>
     <!-- /.container -->
-
-    
- 
