--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -8,13 +8,14 @@
   <script src="/js/typed.js" type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" /> 
+
     <meta charset="UTF-8">
 <meta name="google" content="notranslate">
 <meta http-equiv="Content-Language" content="en">
 </head>
 <body>
- 
+
 
 
        <!-- Navigation -->
@@ -33,7 +34,7 @@
              <nav>
               <ul class="nav nav-pills pull-right">
                 {{#if user}}
-                  <li role="presentation"><a href="/">Dashboard</a></li>                  
+                  <li role="presentation"><a href="/">Dashboard</a></li>
                   <li role="presentation"><a href="/profile">Profile</a></li>
                   <li role="presentation"><a href="/users/logout">Logout</a></li>
                   {{#if user.admin }}<li role="presentation"><a href="/admin">Admin</a></li>{{/if}}
@@ -76,8 +77,8 @@
           {{#if error}}
             <div class="alert alert-danger">{{error}}</div>
           {{/if}}
-           
-        </div> 
+
+        </div>
       </div>
 </div>
       {{{body}}}
@@ -87,9 +88,9 @@
 	        <p>&copy; 2017 Debatable.</p>
 	      </footer>
 	  </div>
-    </div> <!-- /container --> 
-    
-    <script src="js/jquery.js"></script> 
+    </div> <!-- /container -->
+
+    <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
 
