--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -8,7 +8,7 @@
   <script src="/js/typed.js" type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" /> 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 
     <meta charset="UTF-8">
 <meta name="google" content="notranslate">
@@ -19,19 +19,12 @@
 
 
        <!-- Navigation -->
-    <nav class="navbar navbar navbar" role="navigation">
-        <div class="container">
+    <nav class="navbar" role="navigation">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 <a class="navbar-brand" href="/">Debatable</a>
             </div>
-             <nav>
               <ul class="nav nav-pills pull-right">
                 {{#if user}}
                   <li role="presentation"><a href="/">Dashboard</a></li>
@@ -42,8 +35,7 @@
                   <li role="presentation"><a href="/users/login">Login</a></li>
                   <li role="presentation"><a href="/users/register">Register</a></li>
                 {{/if}}
-              </ul>
-            </nav>
+              </ul> 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
