--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1 class="page-header">
-                    Top Debates
+                    Debates
                     <small>{{ current_date }}</small>
                 </h1>
             </div>
@@ -73,8 +73,8 @@
                                 <p class="text">{{ current_topic.topic_desc }}</p>
                                 <div class="debate_card_buttons">
                                 {{#if ../user}}
-                                    <div class="col-sm-6"><a href="#" class="button join_debate" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Join Debate</a></div>
-                                    <div class="col-sm-6"><a href="#" class="button spectate_debate" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Spectate</a></div>
+                                    <div class="col-lg-6 col-sm-12"><a href="#" class="button join_debate" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Join Debate</a></div>
+                                    <div class="col-lg-6 col-sm-12"><a href="#" class="button spectate_debate" data-debateList = "top" data-debateName = "{{ current_topic.topic_name_short }}">Spectate</a></div>
 
                                 {{else}}
                                   <a href="#" class="button">Login to Join</a>
